Bminor++/docs/Grammar Bminor++.txt
prog ::= decl_list 'EOF'

/* Declarations */

class_decl ::= 'CLASS' ':' 'ID' class_body                  // declaración de una clase

class_body ::= '{' class_member_list '}'                    // declaración del cuerpo de una clase

class_member_list ::= /* epsilon */                         // declaración de una lista de miembros de clase
    | class_member class_member_list

class_member ::= decl                                       // declaración de un miembro de clase
    | decl_init

decl_list ::= /* epsilon */
    | decl decl_list

decl ::= 'ID' ':' type_simple ';'
    | 'ID' ':' type_array_sized ';'
    | 'ID' ':' type_func ';'
    | class_decl                                            // declaración de clase agregada
    | decl_init

decl_init ::= 'ID' ':' type_simple '=' expr ';'
    | 'ID' ':' type_array_sized '=' '{' opt_expr_list '}' ';'
    | 'ID' ':' type_func '=' '{' opt_stmt_list '}'
    
/* Statements */

opt_stmt_list ::= /* epsilon */
    | stmt_list

stmt_list ::= stmt
    | stmt stmt_list

stmt ::= open_stmt
    | closed_stmt

closed_stmt ::= if_stmt_closed
    | for_stmt_closed
    | simple_stmt
    | while_stmt_closed                                     // Sentencia de bucle while cerrada agregada

open_stmt ::= if_stmt_open
    | for_stmt_open
    | while_stmt_open                                       // Sentencia de bucle while abeirta agregada

if_cond ::= 'IF' '(' opt_expr ')'

if_stmt_closed ::= if_cond closed_stmt 'ELSE' closed_stmt

if_stmt_open ::= if_cond stmt
    | if_cond closed_stmt 'ELSE' if_stmt_open

for_header ::= 'FOR' '(' opt_expr ';' opt_expr ';' opt_expr ')'

for_stmt_open ::= for_header open_stmt

for_stmt_closed ::= for_header closed_stmt

while_header ::= 'WHILE' '(' opt_expr ')'                   // Cabecera bucle while 

while_stmt_open ::= while_header open_stmt                  // Sentencia abierta para el bucle while 

while_stmt_closed ::= while_header closed_stmt              // Sentencia cerrada para el bucle while 

/* Simple statements are not recursive */
simple_stmt ::= print_stmt
    | return_stmt
    | block_stmt
    | decl
    | expr ';'

print_stmt ::= 'PRINT' opt_expr_list ';'

return_stmt ::= 'RETURN' opt_expr ';'

block_stmt ::= '{' stmt_list '}'

/* Expressions */

opt_expr_list ::= /* epsilon */
    | expr_list

expr_list ::= expr
    | expr ',' expr_list

opt_expr ::= /* epsilon */
    | expr

expr ::= expr1

expr1 ::= lval '=' expr1
    | lval 'ADDEQ' expr1                   // Operador compuesto suma agragdo
    | lval 'SUBEQ' expr1                   // Operador compuesto resta agragdo
    | lval 'MULEQ=' expr1                  // Operador compuesto multiplicación agragdo
    | lval 'DIVEQ' expr1                   // Operador compuesto división agragdo
    | lval 'MODEQ' expr1                   // Operador compuesto modulo agragdo
    | tern_op                              // Operador ternario agregado
    | expr2

tern_op ::= expr2 '?' tern_op ':' tern_op
    | expr2

lval ::= 'ID'
    | 'ID' index
    | 'THIS' '.' 'ID'

expr2 ::= expr2 'LOR' expr3
    | expr3

expr3 ::= expr3 'LAND' expr4
    | expr4

expr4 ::= expr4 'EQ' expr5
    | expr4 'NE' expr5
    | expr4 'LT' expr5
    | expr4 'LE' expr5
    | expr4 'GT' expr5
    | expr4 'GE' expr5
    | expr5


expr5 ::= expr5 '+' expr6
    | expr5 '-' expr6
    | expr6

expr6 ::= expr6 '*' expr7
    | expr6 '/' expr7
    | expr6 '%' expr7
    | expr7

expr7 ::= expr7 '^' expr8
    | expr8

expr8 ::= '-' expr8
    | 'NOT' expr8
    | 'INC' expr8                                               // expresión pre incremento agragada
    | 'DEC' expr8                                               // expresión pre decremento agragada
    | expr9

expr9 ::= expr9 'INC'
    | expr9 'DEC'
    | group

group ::= '(' expr ')'
    | 'ID' '(' opt_expr_list ')'
    | 'ID' index
    | factor
    | object_instantiation                                      // instanciación de objeto agregada
    | member_access                                             // acceso a miembro de clase agregada

object_instantiation ::= 'NEW' 'ID' '(' opt_expr_list ')'       // NonTerminal para la instanciación de objeto

member_access ::= 'ID' '.' 'ID'                                 //NonTerminal para el acceso a miembros de clase
    | 'THIS' '.' 'ID' 
    | member_access '.' 'ID'
    | member_access '(' opt_expr_list ')'

index_list ::= index_list index
		| index

index ::= '[' expr ']'

factor ::= 'ID'
    | 'INTEGER_LITERAL'
    | 'FLOAT_LITERAL'
    | 'CHAR_LITERAL'
    | 'STRING_LITERAL'
    | 'TRUE'
    | 'FALSE'
    | 'THIS'

/* Types */

type_simple ::= 'INTEGER'
    | 'FLOAT'
    | 'BOOLEAN'
    | 'CHAR'
    | 'STRING'
    | 'VOID'
    | 'ID'                                                      // ID agregado a tipos simples 
                                                                para el funcionamiento de acceso a miembro por .            

type_array ::= 'ARRAY' '[' ']' type_simple
    | 'ARRAY' '[' ']' type_array

type_array_sized ::= 'ARRAY' index type_simple
    | 'ARRAY' index type_array_sized

type_func ::= 'FUNCTION' type_simple '(' opt_param_list ')'
    | 'FUNCTION' type_array_sized '(' opt_param_list ')'

opt_param_list ::= /* epsilon */
    | param_list

param_list ::= param
    | param_list ',' param

param ::= 'ID' ':' type_simple
    | 'ID' ':' type_array
    | 'ID' ':' type_array_sized
